Added Audio player and updated to 3 seconds

--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -20,6 +20,8 @@
 
         <!-- Message Display -->
         <div id="message"></div>
+
+        <audio id="audioPlayer" controls></audio>
     </div>
 
     <!-- Importing JS file for controlling the recording -->
