Audio length Tuning

--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -20,6 +20,11 @@
 
         <!-- Message Display -->
         <div id="message"></div>
+        
+        <div id="timer"></div>
+        <div id="progress-container" style="height: 20px; width: 100%; background-color: #EEE;">
+            <div id="progress-bar" style="height: 100%; background-color: #0277bd; width: 0;"></div>
+        </div>
 
         <audio id="audioPlayer" controls></audio>
     </div>
