--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <!-- Button for triggering the recording -->
         <button id="recordButton">Record</button>
-
+        <button id="convertButton" style="display: none;">Convert</button>
         <!-- Countdown Timer Display before recording -->
         <div id="countdown"></div>
 
